added car filter information to swagger
